--- a/index.html
+++ b/index.html
@@ -1,23 +1,7 @@
 <!DOCTYPE html>
 
 <head><title>i hate my github pages site</title>
-<style>
-    body {
-        background-color: lemonchiffon;
-        color: #ccc266;
-        text-align: center;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-    div {
-        margin-left: 10%;
-        margin-right: 10%;
-        margin-top: 40px;
-        margin-bottom: 100px;
-        font-size: medium;
-        border-bottom: solid 2px #ccc266;
-    }
-
-</style>
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/meowzzie/meow.github.io/main/style.css">
 </head>
 
 <header><h1 style="border-bottom: solid 2px #ccc266; padding-bottom: 30px;">meowzzie s github pages site</h1></header>
