close body element

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         margin-left: 10%;
         margin-right: 10%;
         margin-top: 40px;
-        margin-bottom: 100px;
+        padding-bottom: 30px;
         font-size: medium;
-        border-bottom: solid 2px #ccc266;
     }
 </style>
 </head>
@@ -26,9 +25,11 @@
     
     <p>hi im meowzzie <sup>they/he/she/</sup> i love living in my room like most ppl do and i also absolutely love animals (chickens included) <br>i honestly dont know what to put in this long paragraph so i think i should get started with stuff thats cool :3 <br>i hate using any other keyboard that doesnt look or feel like those ps/2 keyboards, i despise 40% keyboards, my main pc is from 2008 and i barely use my macbook knowing that its more powerful than any other pc money can buy from 2012-2013 <br>lain and bludgeoning angel dokuro-chan enjoyer, watched future diary when i was like 10 bc i thought it was a cute anime (it wasnt.) <br>ill listen to anything even to goreshit (love them literally and figuratively),i dont use spotify unless i want to give money to the ppl who made the awesome songs,not to ppl who reposted them unless the artist is problematic :o</p>
     </div>
+    <p style="border-bottom: solid 2px #ccc266;">(´｡• ω •｡`) ♡</p>
     <p>links:</p>
     <a href="https://github.com/meowzzie">github</a>
     <span>:</span>
     <a href="mailto:meowzzie@protonmail.com">mail me</a>
     <span>:</span>
     <a href="https://www.twitter.com/meowzforever">bird app</a>
+</body>
