--- a/index.html
+++ b/index.html
@@ -1,35 +1,75 @@
 <!DOCTYPE html>
-
-<head><title>i hate my github pages site</title>
-<style>
-    body {
-        background-color: lemonchiffon;
-        color: #ccc266;
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>personal site</title>
+    <style>
+      html {
+        font-family: "Courier New", Courier, monospace;
+      }
+      header {
         text-align: center;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-    div {
-        margin-left: 10%;
-        margin-right: 10%;
-        margin-top: 40px;
-        padding-bottom: 30px;
-        font-size: medium;
-    }
-</style>
-</head>
-
-<header><h1 style="border-bottom: solid 2px #ccc266; padding-bottom: 30px;">meowzzie s github pages site</h1></header>
-
-<body>
-    <div> <!-- here comes teh weird quirky intro :3 -->
-    
-    <p>hi im meowzzie <sup>they/he/she/</sup> i love living in my room like most ppl do and i also absolutely love animals (chickens included) <br>i honestly dont know what to put in this long paragraph so i think i should get started with stuff thats cool :3 <br>i hate using any other keyboard that doesnt look or feel like those ps/2 keyboards, i despise 40% keyboards, my main pc is from 2008 and i barely use my macbook knowing that its more powerful than any other pc money can buy from 2012-2013 <br>lain and bludgeoning angel dokuro-chan enjoyer, watched future diary when i was like 10 bc i thought it was a cute anime (it wasnt.) <br>ill listen to anything even to goreshit (love them literally and figuratively),i dont use spotify unless i want to give money to the ppl who made the awesome songs,not to ppl who reposted them unless the artist is problematic :o</p>
+        color: rgb(255, 139, 100);
+        border-bottom: 2px dashed;
+        font-size: 18px;
+      }
+      div {
+        background-color: rgb(255, 220, 208);
+        color: rgb(22, 22, 22);
+        margin: 12px;
+        font-size: 16px;
+        padding: 11px;
+        border: 1px solid rgb(255, 139, 100);
+      }
+      a {
+        color: coral;
+      }
+      span {
+        color: rgb(255, 94, 40);
+      }
+      footer {
+        text-align: center;
+        border-top: 2px dashed rgb(255, 139, 100);
+        padding-top: 22px;
+      }
+    </style>
+  </head>
+  <header>
+    <h1>meowzzie</h1>
+  </header>
+  <body>
+    <div>
+      <li>
+        This is my own, personal space on the internet. Don't really know what
+        to put in here so...
+      </li>
+      <li>
+        I disregard coding and i admit, I kinda am a lazy person. Even I enjoy
+        some stuff, but doing github stuff isn't really the stuff I'm interested
+        in. Feel free to browse around or something.
+      </li>
+      <li>
+        My interest in any level or computer stuff is close to zero, but i do
+        not discriminate against wrong opinions or others who disagree. Unless
+        your opinion is totally wrong and does not make any sense, I do not give
+        any form of attention.
+      </li>
+      <li>
+        I cannot give you any advice or info about any stuff i don't know but i
+        will argue with you if it piques my interest.
+      </li>
+      <li>
+        Once more, feel free to do anything here, copy my website as a template,
+        use it for your own experiments or even suggest stuff. That was my
+        introduction.
+      </li>
     </div>
-    <p style="border-bottom: solid 2px #ccc266;">(´｡• ω •｡`) ♡</p>
-    <p>links:</p>
+  </body>
+  <footer>
     <a href="https://github.com/meowzzie">github</a>
     <span>:</span>
-    <a href="mailto:meowzzie@protonmail.com">mail me</a>
+    <a href="twitter.com/meowzforever">twitter</a>
     <span>:</span>
-    <a href="https://www.twitter.com/meowzforever">bird app</a>
-</body>
+    <a href="github.com/meowzzie/meowzzie.github.io">source code</a>
+  </footer>
+</html>
